<resources>
    <string name="app_name">Babber</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continuar">Continuar</string>
    <string name="ajustes">Ajustes</string>
    <string name="consejos">Consejos</string>
    <string name="agregar_beb">Agregar Bebé</string>
    <string name="vincular_aplicaci_n">Vincular aplicación</string>
    <string name="vincular_dispositivo">Vincular Dispositivo</string>
    <string name="monitor">Monitor</string>
    <string name="vinculaci_n">Vinculación</string>
    <string name="agregar_beb_boton">Agregar bebé boton</string>
    <string name="ingresa_el_sexo_de_tu_bebe">Ingresa el sexo de tu bebe</string>
    <string name="sexo">Sexo</string>

    <string name="edad_placeholder">Edad: </string>
    <string name="lpm">LPM:</string>
    <string name="edad">Edad:</string>
    <string name="sexo_label">Sexo:</string>
    <string name="peso_kg">Peso(Kg):</string>
    <string name="advice_text_fragment_two">Revisa periodicamente la app si no cuentas con el tiempo para estar con tu bebé</string>
    <string name="advice_text_fragment_three">La mejor forma de prevenir un desastre es llevar a tu bebé periodicamente con un especialista, no dejes pasar las señales.</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="ayuda">Ayuda</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="celular">Celular</string>
    <string name="edad_semanas">Edad (Semanas)</string>
    <string name="peso">Peso:</string>
    <string name="lorem_ipsum">" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed nulla scelerisque nunc placerat commodo at id arcu. Nunc faucibus quis leo in maximus. Curabitur in sodales diam. Vestibulum quis egestas libero. Donec quis hendrerit diam. Fusce vel turpis sit amet nunc aliquam pellentesque et in tortor. Aliquam a metus et nibh aliquam iaculis eget mollis turpis.  Vestibulum suscipit porta lectus, ut malesuada dolor pellentesque quis. Vestibulum dictum velit sed lorem egestas, at dapibus est ultrices. Curabitur fermentum sed elit non molestie. Cras id sagittis arcu. Sed purus nunc, posuere eu aliquam eu, ultricies sit amet odio. Fusce finibus sapien non dignissim dictum. Donec aliquam ac nulla non finibus. Aenean iaculis lorem eu odio rutrum imperdiet. Nunc eget lectus eget mauris dignissim accumsan. Nunc convallis ligula et lorem dictum, eget molestie velit ultrices. Integer justo urna, blandit a tristique vel, dictum sed ligula. Curabitur at arcu at enim varius commodo. Aliquam volutpat enim vel nisl ornare, a tempus odio pellentesque. Pellentesque euismod ante suscipit ligula tincidunt, et rhoncus quam sodales. Nam quis ligula sed lacus volutpat viverra id id erat. Ut pellentesque odio eu malesuada pharetra.  Quisque congue in erat quis aliquam. Sed mollis mollis dolor, a placerat tortor elementum sed. Ut volutpat lacus at urna pellentesque scelerisque. Proin a lectus ac odio tristique commodo eu non massa. Mauris risus dui, eleifend id faucibus sed, mollis ut orci. Nam pellentesque mi in mi auctor, quis hendrerit ante auctor. Morbi accumsan, diam at fermentum tempus, orci nibh suscipit lacus, nec tincidunt purus diam at felis. Nulla dictum enim eget dolor egestas, sit amet imperdiet ex auctor. Vivamus sit amet dignissim erat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse eu lacus consequat, pulvinar quam nec, placerat urna. Vivamus nunc ligula, accumsan sed massa vitae, pretium cursus enim. Donec eleifend, nulla a rhoncus rutrum, libero risus posuere mi, ut rhoncus magna lectus eu libero. Praesent eget lacinia lorem, sed tempor odio. Donec semper feugiat ante, ac commodo odio viverra nec. Morbi ac enim turpis. "</string>
    <string name="link_quote">Para saber más aquí!</string>
    <string name="comparte_este_qr">Comparte este QR para enviar notificaciones a los dispositivos vinculados</string>
    <string name="qr_generator_image">QR generator image</string>


</resources>